fixed overflowing body in IE 11

--- a/assets/_css-src/_collateral-category.sass
+++ b/assets/_css-src/_collateral-category.sass
@@ -42,13 +42,14 @@ body.collateral
     .marquee
       position: relative
       margin-bottom: 30%
+      overflow: hidden
       .scaling-svg
         display: block
-        width: 100%
       .light-box
         position: absolute
         top: 31.4%
         left: 10.25%
+        right: 10.25%
         height: 19.1%
         text
           font-family: "Open Sans Condensed"
